--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,11 +10,10 @@ set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG ${CMAKE_CURRENT_SOURCE_DIR}/bin.dbg)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE ${CMAKE_CURRENT_SOURCE_DIR}/bin.rel)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO ${CMAKE_CURRENT_SOURCE_DIR}bin.relwithdbg)
 
-option(BUILD_WITH_CODEFORCES "Build prj.codeforces targets" off)
+#option(BUILD_WITH_CODEFORCES "Build prj.codeforces targets" off)
 
-if (BUILD_WITH_CODEFORCES)
-    add_subdirectory(prj.codeforces)
-endif()
+#if (BUILD_WITH_CODEFORCES)
+#    add_subdirectory(prj.codeforces)
+#endif()
 
 add_subdirectory(prj.lab)
-add_subdirectory(prj.test)
