add implementation of dynarr

--- a/prj.lab/complex/CMakeLists.txt
+++ b/prj.lab/complex/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(complex complex.cpp complex.hpp
-        ../../prj.test/complex_test.cpp)
+        ../../prj.test/complex_test.cpp
+)
 #add_executable(complex_test ../prj_test/complex_test.cpp)
 set_property(TARGET complex PROPERTY CXX_STANDARD 11)
 target_include_directories(complex PUBLIC
