add impl StackArrT

--- a/prj.test/CMakeLists.txt
+++ b/prj.test/CMakeLists.txt
@@ -8,3 +8,6 @@ target_link_libraries(rational_test rational)
 
 add_executable(dynarr_test dynarr_test.cpp)
 target_link_libraries(dynarr_test dynarr)
+
+add_executable(StackArrT_test StackArrT_test.cpp)
+target_link_libraries(StackArrT_test StackArrT)
