edit impl StackArrT

--- a/prj.lab/StackArrT/CMakeLists.txt
+++ b/prj.lab/StackArrT/CMakeLists.txt
@@ -1,6 +1,3 @@
-add_library(StackArrT StackArrT.сpp)
-target_include_directories(StackArrT PUBLIC
-        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
-        $<INSTALL_INTERFACE:include>
-)
-install(TARGETS StackArrT)
+add_library(StackArrT INTERFACE
+        StackArrT.hpp)
+target_include_directories(StackArrT INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/..)
