edit impl and test for StackArrT, also have some bugs with cmake

--- a/prj.lab/StackArrT/CMakeLists.txt
+++ b/prj.lab/StackArrT/CMakeLists.txt
@@ -1,3 +1,6 @@
-add_library(StackArrT INTERFACE
-        StackArrT.hpp)
-target_include_directories(StackArrT INTERFACE ${CMAKE_CURRENT_SOURCE_DIR}/..)
+add_library(StackArrT StackArrT.hpp)
+target_include_directories(StackArrT PUBLIC
+        $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
+        $<INSTALL_INTERFACE:include>
+)
+install(TARGETS StackArrT)
