fix problems with building StackArrT

--- a/prj.lab/StackArrT/CMakeLists.txt
+++ b/prj.lab/StackArrT/CMakeLists.txt
@@ -1,4 +1,6 @@
-add_library(StackArrT StackArrT.hpp)
+add_library(StackArrT StackArrT.hpp
+        StackArrT.cpp
+)
 target_include_directories(StackArrT PUBLIC
         $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/..>
         $<INSTALL_INTERFACE:include>
