add impl StackLstT

--- a/prj.lab/CMakeLists.txt
+++ b/prj.lab/CMakeLists.txt
@@ -3,3 +3,4 @@ add_subdirectory(rational)
 add_subdirectory(StackArrT)
 add_subdirectory(dynarr)
 add_subdirectory(DoubleListQueue)
+add_subdirectory(StackLstT)
