add impl BinarySearchTree

--- a/prj.test/CMakeLists.txt
+++ b/prj.test/CMakeLists.txt
@@ -20,3 +20,5 @@ target_link_libraries(DoubleListQueue_test DoubleListQueue)
 add_executable(StackLstT_test StackLstT_test.cpp)
 target_link_libraries(StackLstT_test StackLstT)
 
+add_executable(BinarySearchTree_test BinarySearchTree_test.cpp)
+target_link_libraries(BinarySearchTree_test BinarySearchTree)
