--- a/prj.lab/CMakeLists.txt
+++ b/prj.lab/CMakeLists.txt
@@ -4,3 +4,4 @@ add_subdirectory(StackArrT)
 add_subdirectory(dynarr)
 add_subdirectory(DoubleListQueue)
 add_subdirectory(StackLstT)
+add_subdirectory(BinarySearchTree)
