add impl for FinalTest(CustomContainer)

--- a/prj.lab/CMakeLists.txt
+++ b/prj.lab/CMakeLists.txt
@@ -6,3 +6,4 @@ add_subdirectory(DoubleListQueue)
 add_subdirectory(StackLstT)
 add_subdirectory(BinarySearchTree)
 add_subdirectory(HashTable)
+add_subdirectory(CustomContainer)
